ec2-instance/sg.tf
resource "aws_security_group" "allow_ssh_http" {
	name="${var.name} allow_ssh_http"
	description="Allow SSH and HTTP traffic"

	vpc_id = "${aws_vpc.main.id}"
  
	ingress {
		from_port=80
		to_port=80
		protocol="tcp"
		cidr_blocks=["0.0.0.0/0"]
	}

	ingress {
      		from_port = 22
      		to_port = 22
      		protocol = "tcp"
      		cidr_blocks = ["0.0.0.0/0"]
  	}
	
	ingress {
      		from_port = 5984
      		to_port = 5984
      		protocol = "tcp"
      		cidr_blocks = ["0.0.0.0/0"]
  	}

	egress {

		from_port=0
		to_port=0
		protocol="-1"
		cidr_blocks=["0.0.0.0/0"]
	}
	tags {
   		Name = "web"
  	}
}
